html/css prototype working
I still need to work on that last state, it's going blank rather than stopping on the filled star.

--- a/fav-sequence.html
+++ b/fav-sequence.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
+<head>
+    <link rel="stylesheet" type="text/css" href="fav-sequence.css">
+</head>
 <html>
 <body>
-
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-
+    <section class="fav"></section>
 </body>
 </html>
